Fix clarity issues
PiperOrigin-RevId: 368737417